--- a/compose.yml
+++ b/compose.yml
@@ -8,5 +8,5 @@ services:
     environment:
       - PYTHONUNBUFFERED=1
     ports:
-      - "8000:8000"  # Adjust this if your app uses a different port
-    command: python src/main.py
+      - "8000:8000"
+    command: "sh src/start.sh"
